fascript/_AntlrGens/FAScriptParser.cpp

// Generated from FAScript.g4 by ANTLR 4.9.3


#include "FAScriptVisitor.h"

#include "FAScriptParser.h"


using namespace antlrcpp;
using namespace antlr4;

FAScriptParser::FAScriptParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FAScriptParser::~FAScriptParser() {
  delete _interpreter;
}

std::string FAScriptParser::getGrammarFileName() const {
  return "FAScript.g4";
}

const std::vector<std::string>& FAScriptParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FAScriptParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ShiftLAssignContext ------------------------------------------------------------------

FAScriptParser::ShiftLAssignContext::ShiftLAssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FAScriptParser::ShiftLOpContext* FAScriptParser::ShiftLAssignContext::shiftLOp() {
  return getRuleContext<FAScriptParser::ShiftLOpContext>(0);
}

tree::TerminalNode* FAScriptParser::ShiftLAssignContext::Assign() {
  return getToken(FAScriptParser::Assign, 0);
}


size_t FAScriptParser::ShiftLAssignContext::getRuleIndex() const {
  return FAScriptParser::RuleShiftLAssign;
}


antlrcpp::Any FAScriptParser::ShiftLAssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitShiftLAssign(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::ShiftLAssignContext* FAScriptParser::shiftLAssign() {
  ShiftLAssignContext *_localctx = _tracker.createInstance<ShiftLAssignContext>(_ctx, getState());
  enterRule(_localctx, 0, FAScriptParser::RuleShiftLAssign);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    shiftLOp();
    setState(77);
    match(FAScriptParser::Assign);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftRAssignContext ------------------------------------------------------------------

FAScriptParser::ShiftRAssignContext::ShiftRAssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FAScriptParser::ShiftROpContext* FAScriptParser::ShiftRAssignContext::shiftROp() {
  return getRuleContext<FAScriptParser::ShiftROpContext>(0);
}

tree::TerminalNode* FAScriptParser::ShiftRAssignContext::Assign() {
  return getToken(FAScriptParser::Assign, 0);
}


size_t FAScriptParser::ShiftRAssignContext::getRuleIndex() const {
  return FAScriptParser::RuleShiftRAssign;
}


antlrcpp::Any FAScriptParser::ShiftRAssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitShiftRAssign(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::ShiftRAssignContext* FAScriptParser::shiftRAssign() {
  ShiftRAssignContext *_localctx = _tracker.createInstance<ShiftRAssignContext>(_ctx, getState());
  enterRule(_localctx, 2, FAScriptParser::RuleShiftRAssign);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    shiftROp();
    setState(80);
    match(FAScriptParser::Assign);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AllAssignContext ------------------------------------------------------------------

FAScriptParser::AllAssignContext::AllAssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::AllAssignContext::Assign() {
  return getToken(FAScriptParser::Assign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::AddAssign() {
  return getToken(FAScriptParser::AddAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::SubAssign() {
  return getToken(FAScriptParser::SubAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::StarAssign() {
  return getToken(FAScriptParser::StarAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::StarStarAssign() {
  return getToken(FAScriptParser::StarStarAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::DivAssign() {
  return getToken(FAScriptParser::DivAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::ModAssign() {
  return getToken(FAScriptParser::ModAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::AndAssign() {
  return getToken(FAScriptParser::AndAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::OrAssign() {
  return getToken(FAScriptParser::OrAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::XorAssign() {
  return getToken(FAScriptParser::XorAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::AndAndAssign() {
  return getToken(FAScriptParser::AndAndAssign, 0);
}

tree::TerminalNode* FAScriptParser::AllAssignContext::OrOrAssign() {
  return getToken(FAScriptParser::OrOrAssign, 0);
}

FAScriptParser::ShiftLAssignContext* FAScriptParser::AllAssignContext::shiftLAssign() {
  return getRuleContext<FAScriptParser::ShiftLAssignContext>(0);
}

FAScriptParser::ShiftRAssignContext* FAScriptParser::AllAssignContext::shiftRAssign() {
  return getRuleContext<FAScriptParser::ShiftRAssignContext>(0);
}


size_t FAScriptParser::AllAssignContext::getRuleIndex() const {
  return FAScriptParser::RuleAllAssign;
}


antlrcpp::Any FAScriptParser::AllAssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitAllAssign(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::AllAssignContext* FAScriptParser::allAssign() {
  AllAssignContext *_localctx = _tracker.createInstance<AllAssignContext>(_ctx, getState());
  enterRule(_localctx, 4, FAScriptParser::RuleAllAssign);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(96);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FAScriptParser::Assign: {
        enterOuterAlt(_localctx, 1);
        setState(82);
        match(FAScriptParser::Assign);
        break;
      }

      case FAScriptParser::AddAssign: {
        enterOuterAlt(_localctx, 2);
        setState(83);
        match(FAScriptParser::AddAssign);
        break;
      }

      case FAScriptParser::SubAssign: {
        enterOuterAlt(_localctx, 3);
        setState(84);
        match(FAScriptParser::SubAssign);
        break;
      }

      case FAScriptParser::StarAssign: {
        enterOuterAlt(_localctx, 4);
        setState(85);
        match(FAScriptParser::StarAssign);
        break;
      }

      case FAScriptParser::StarStarAssign: {
        enterOuterAlt(_localctx, 5);
        setState(86);
        match(FAScriptParser::StarStarAssign);
        break;
      }

      case FAScriptParser::DivAssign: {
        enterOuterAlt(_localctx, 6);
        setState(87);
        match(FAScriptParser::DivAssign);
        break;
      }

      case FAScriptParser::ModAssign: {
        enterOuterAlt(_localctx, 7);
        setState(88);
        match(FAScriptParser::ModAssign);
        break;
      }

      case FAScriptParser::AndAssign: {
        enterOuterAlt(_localctx, 8);
        setState(89);
        match(FAScriptParser::AndAssign);
        break;
      }

      case FAScriptParser::OrAssign: {
        enterOuterAlt(_localctx, 9);
        setState(90);
        match(FAScriptParser::OrAssign);
        break;
      }

      case FAScriptParser::XorAssign: {
        enterOuterAlt(_localctx, 10);
        setState(91);
        match(FAScriptParser::XorAssign);
        break;
      }

      case FAScriptParser::AndAndAssign: {
        enterOuterAlt(_localctx, 11);
        setState(92);
        match(FAScriptParser::AndAndAssign);
        break;
      }

      case FAScriptParser::OrOrAssign: {
        enterOuterAlt(_localctx, 12);
        setState(93);
        match(FAScriptParser::OrOrAssign);
        break;
      }

      case FAScriptParser::QuotJianL: {
        enterOuterAlt(_localctx, 13);
        setState(94);
        shiftLAssign();
        break;
      }

      case FAScriptParser::QuotJianR: {
        enterOuterAlt(_localctx, 14);
        setState(95);
        shiftRAssign();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftLOpContext ------------------------------------------------------------------

FAScriptParser::ShiftLOpContext::ShiftLOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FAScriptParser::ShiftLOpContext::QuotJianL() {
  return getTokens(FAScriptParser::QuotJianL);
}

tree::TerminalNode* FAScriptParser::ShiftLOpContext::QuotJianL(size_t i) {
  return getToken(FAScriptParser::QuotJianL, i);
}


size_t FAScriptParser::ShiftLOpContext::getRuleIndex() const {
  return FAScriptParser::RuleShiftLOp;
}


antlrcpp::Any FAScriptParser::ShiftLOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitShiftLOp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::ShiftLOpContext* FAScriptParser::shiftLOp() {
  ShiftLOpContext *_localctx = _tracker.createInstance<ShiftLOpContext>(_ctx, getState());
  enterRule(_localctx, 6, FAScriptParser::RuleShiftLOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(FAScriptParser::QuotJianL);
    setState(99);
    match(FAScriptParser::QuotJianL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftROpContext ------------------------------------------------------------------

FAScriptParser::ShiftROpContext::ShiftROpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FAScriptParser::ShiftROpContext::QuotJianR() {
  return getTokens(FAScriptParser::QuotJianR);
}

tree::TerminalNode* FAScriptParser::ShiftROpContext::QuotJianR(size_t i) {
  return getToken(FAScriptParser::QuotJianR, i);
}


size_t FAScriptParser::ShiftROpContext::getRuleIndex() const {
  return FAScriptParser::RuleShiftROp;
}


antlrcpp::Any FAScriptParser::ShiftROpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitShiftROp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::ShiftROpContext* FAScriptParser::shiftROp() {
  ShiftROpContext *_localctx = _tracker.createInstance<ShiftROpContext>(_ctx, getState());
  enterRule(_localctx, 8, FAScriptParser::RuleShiftROp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(FAScriptParser::QuotJianR);
    setState(102);
    match(FAScriptParser::QuotJianR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LtOpContext ------------------------------------------------------------------

FAScriptParser::LtOpContext::LtOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::LtOpContext::QuotJianL() {
  return getToken(FAScriptParser::QuotJianL, 0);
}


size_t FAScriptParser::LtOpContext::getRuleIndex() const {
  return FAScriptParser::RuleLtOp;
}


antlrcpp::Any FAScriptParser::LtOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitLtOp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::LtOpContext* FAScriptParser::ltOp() {
  LtOpContext *_localctx = _tracker.createInstance<LtOpContext>(_ctx, getState());
  enterRule(_localctx, 10, FAScriptParser::RuleLtOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(FAScriptParser::QuotJianL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LtEqualOpContext ------------------------------------------------------------------

FAScriptParser::LtEqualOpContext::LtEqualOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::LtEqualOpContext::QuotJianL() {
  return getToken(FAScriptParser::QuotJianL, 0);
}

tree::TerminalNode* FAScriptParser::LtEqualOpContext::Assign() {
  return getToken(FAScriptParser::Assign, 0);
}


size_t FAScriptParser::LtEqualOpContext::getRuleIndex() const {
  return FAScriptParser::RuleLtEqualOp;
}


antlrcpp::Any FAScriptParser::LtEqualOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitLtEqualOp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::LtEqualOpContext* FAScriptParser::ltEqualOp() {
  LtEqualOpContext *_localctx = _tracker.createInstance<LtEqualOpContext>(_ctx, getState());
  enterRule(_localctx, 12, FAScriptParser::RuleLtEqualOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(FAScriptParser::QuotJianL);
    setState(107);
    match(FAScriptParser::Assign);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GtOpContext ------------------------------------------------------------------

FAScriptParser::GtOpContext::GtOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::GtOpContext::QuotJianR() {
  return getToken(FAScriptParser::QuotJianR, 0);
}


size_t FAScriptParser::GtOpContext::getRuleIndex() const {
  return FAScriptParser::RuleGtOp;
}


antlrcpp::Any FAScriptParser::GtOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitGtOp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::GtOpContext* FAScriptParser::gtOp() {
  GtOpContext *_localctx = _tracker.createInstance<GtOpContext>(_ctx, getState());
  enterRule(_localctx, 14, FAScriptParser::RuleGtOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(FAScriptParser::QuotJianR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GtEqualOpContext ------------------------------------------------------------------

FAScriptParser::GtEqualOpContext::GtEqualOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::GtEqualOpContext::QuotJianR() {
  return getToken(FAScriptParser::QuotJianR, 0);
}

tree::TerminalNode* FAScriptParser::GtEqualOpContext::Assign() {
  return getToken(FAScriptParser::Assign, 0);
}


size_t FAScriptParser::GtEqualOpContext::getRuleIndex() const {
  return FAScriptParser::RuleGtEqualOp;
}


antlrcpp::Any FAScriptParser::GtEqualOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitGtEqualOp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::GtEqualOpContext* FAScriptParser::gtEqualOp() {
  GtEqualOpContext *_localctx = _tracker.createInstance<GtEqualOpContext>(_ctx, getState());
  enterRule(_localctx, 16, FAScriptParser::RuleGtEqualOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(FAScriptParser::QuotJianR);
    setState(112);
    match(FAScriptParser::Assign);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EqualOpContext ------------------------------------------------------------------

FAScriptParser::EqualOpContext::EqualOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FAScriptParser::EqualOpContext::Assign() {
  return getTokens(FAScriptParser::Assign);
}

tree::TerminalNode* FAScriptParser::EqualOpContext::Assign(size_t i) {
  return getToken(FAScriptParser::Assign, i);
}


size_t FAScriptParser::EqualOpContext::getRuleIndex() const {
  return FAScriptParser::RuleEqualOp;
}


antlrcpp::Any FAScriptParser::EqualOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitEqualOp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::EqualOpContext* FAScriptParser::equalOp() {
  EqualOpContext *_localctx = _tracker.createInstance<EqualOpContext>(_ctx, getState());
  enterRule(_localctx, 18, FAScriptParser::RuleEqualOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(FAScriptParser::Assign);
    setState(115);
    match(FAScriptParser::Assign);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NotEqualOpContext ------------------------------------------------------------------

FAScriptParser::NotEqualOpContext::NotEqualOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::NotEqualOpContext::Exclam() {
  return getToken(FAScriptParser::Exclam, 0);
}

tree::TerminalNode* FAScriptParser::NotEqualOpContext::Assign() {
  return getToken(FAScriptParser::Assign, 0);
}


size_t FAScriptParser::NotEqualOpContext::getRuleIndex() const {
  return FAScriptParser::RuleNotEqualOp;
}


antlrcpp::Any FAScriptParser::NotEqualOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitNotEqualOp(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::NotEqualOpContext* FAScriptParser::notEqualOp() {
  NotEqualOpContext *_localctx = _tracker.createInstance<NotEqualOpContext>(_ctx, getState());
  enterRule(_localctx, 20, FAScriptParser::RuleNotEqualOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(FAScriptParser::Exclam);
    setState(118);
    match(FAScriptParser::Assign);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprFuncDefContext ------------------------------------------------------------------

FAScriptParser::ExprFuncDefContext::ExprFuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::ExprFuncDefContext::Assign() {
  return getToken(FAScriptParser::Assign, 0);
}

tree::TerminalNode* FAScriptParser::ExprFuncDefContext::QuotJianR() {
  return getToken(FAScriptParser::QuotJianR, 0);
}


size_t FAScriptParser::ExprFuncDefContext::getRuleIndex() const {
  return FAScriptParser::RuleExprFuncDef;
}


antlrcpp::Any FAScriptParser::ExprFuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitExprFuncDef(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::ExprFuncDefContext* FAScriptParser::exprFuncDef() {
  ExprFuncDefContext *_localctx = _tracker.createInstance<ExprFuncDefContext>(_ctx, getState());
  enterRule(_localctx, 22, FAScriptParser::RuleExprFuncDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(FAScriptParser::Assign);
    setState(121);
    match(FAScriptParser::QuotJianR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelfOp2Context ------------------------------------------------------------------

FAScriptParser::SelfOp2Context::SelfOp2Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::AddOp() {
  return getToken(FAScriptParser::AddOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::SubOp() {
  return getToken(FAScriptParser::SubOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::StarOp() {
  return getToken(FAScriptParser::StarOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::DivOp() {
  return getToken(FAScriptParser::DivOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::StarStarOp() {
  return getToken(FAScriptParser::StarStarOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::ModOp() {
  return getToken(FAScriptParser::ModOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::AndOp() {
  return getToken(FAScriptParser::AndOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::OrOp() {
  return getToken(FAScriptParser::OrOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::XorOp() {
  return getToken(FAScriptParser::XorOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::AndAndOp() {
  return getToken(FAScriptParser::AndAndOp, 0);
}

tree::TerminalNode* FAScriptParser::SelfOp2Context::OrOrOp() {
  return getToken(FAScriptParser::OrOrOp, 0);
}

FAScriptParser::ShiftLOpContext* FAScriptParser::SelfOp2Context::shiftLOp() {
  return getRuleContext<FAScriptParser::ShiftLOpContext>(0);
}

FAScriptParser::ShiftROpContext* FAScriptParser::SelfOp2Context::shiftROp() {
  return getRuleContext<FAScriptParser::ShiftROpContext>(0);
}


size_t FAScriptParser::SelfOp2Context::getRuleIndex() const {
  return FAScriptParser::RuleSelfOp2;
}


antlrcpp::Any FAScriptParser::SelfOp2Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FAScriptVisitor*>(visitor))
    return parserVisitor->visitSelfOp2(this);
  else
    return visitor->visitChildren(this);
}

FAScriptParser::SelfOp2Context* FAScriptParser::selfOp2() {
  SelfOp2Context *_localctx = _tracker.createInstance<SelfOp2Context>(_ctx, getState());
  enterRule(_localctx, 24, FAScriptParser::RuleSelfOp2);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(136);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FAScriptParser::AddOp: {
        enterOuterAlt(_localctx, 1);
        setState(123);
        match(FAScriptParser::AddOp);
        break;
      }
